[tool.poetry]
name = "ed-infrastructure"
version = "0.1.2"
description = ""
authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
twine = "^6.1.0"
ed-domain = "^0.2.6"
pymongo = "^4.11.3"
sqlalchemy = "^2.0.40"
pika = "^1.3.2"
jsons = "^1.6.3"

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
