[tool.poetry]
name = "ed-infrastructure"
version = "0.1.17"
description = ""
authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
twine = "^6.1.0"
ed-domain = "0.3.10"
pymongo = "^4.11.3"
sqlalchemy = "^2.0.40"
pika = "^1.3.2"
jsons = "^1.6.3"
resend = "^2.7.0"
pyjwt = "^2.10.1"
passlib = "^1.7.4"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
