[tool.poetry]
name = "ed-infrastructure"
version = "0.3.15"
description = ""
authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
twine = "^6.1.0"
ed-domain = "0.3.48"
pymongo = "^4.11.3"
pika = "^1.3.2"
jsons = "^1.6.3"
resend = "^2.7.0"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
aiohttp = "^3.12.6"
pydantic = "^2.11.5"
psycopg = "^3.2.9"
asyncio = "^3.4.3"
greenlet = "^3.2.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
dotenv = "^0.9.9"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
